fix invisible menu on mobile

--- a/skin/frontend/rwd/dhh/css/styles.css
+++ b/skin/frontend/rwd/dhh/css/styles.css
@@ -4448,7 +4448,7 @@ a.level4:before {
   position:fixed;
   top:0;
   width:100%;
-  z-index:5;
+  z-index:4;
 }
 
 #darknessx {
